fix  a few dark mode ui regressions (#542)
* fix dark mode regressions

* combobox regressions

--- a/src/components/dls/Forms/Combobox/Combobox.module.scss
+++ b/src/components/dls/Forms/Combobox/Combobox.module.scss
@@ -80,6 +80,7 @@
 }
 
 .multiSelectSearchInput {
+  color: var(--color-text-default);
   margin: 0;
   padding: 0;
   background: 0 0;
