--- a/src/components/dls/Forms/Combobox/ComboboxItem/ComboboxItem.module.scss
+++ b/src/components/dls/Forms/Combobox/ComboboxItem/ComboboxItem.module.scss
@@ -7,6 +7,7 @@
 }
 
 .itemContainer {
+  color: var(--color-text-default);
   padding: var(--spacing-xsmall) var(--spacing-small);
 }
 
